Version 1.2.1 - 2023-08-20
  - fix: org-remark-icon-mode is a void symbol

Version 1.2.0 - 2023-08-20

  - feat(info): Org-remark supports Info

          + Advice has been implemented. It is added and removed by
            `org-remark-info-mode`.

          + No suitable hook is avaialble to trigger a function after the Info node
            is rendered. This is necessary as Info renders a new node in the same
            buffer (in the same way as Nov.el does).

  - feat: icons for additional information for highlights

          + Notes exists for the highlight (*)

          + The highlight position auto-adjusted (d)

          + Uses the new `org-remark-highlights-after-load-functions'

          + Icons are customizable. You can also disable icons by setting
            the respective customizing variable to nil

          + The default face of auto-adjusted icon is customizable with
            face `org-remark-highlighter-warning'

          + `org-remark-toggle' also toggles the icon display

  - feat: nov.el support for epub books

         + The link is added to the notes org file correctly pointing
           back to epub's highlight location with using :nov link type
           added by nov.el.l

  - feat: Adjust positions after load

         + This is useful especially for epubs via nov.el. Nov.el
           renders tables on differently depending on the size of the
           window. This causes the positions of subsequent text elements
           to move depending on the window size when the page is
           rendered, dislocating the positions of highlights. This
           feature attemps to auto-correct the location on the fly. The
           feature works generically, so Org-remark attemps to correct
           minior edits to websites (for EWW).

         + The fact that a given highlight has been automatically moved
           is indicated by an icon

  - feat: org-remark-highlights-after-load-functions
          Abnormal hook

  Fixes:
